--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# To boot the app run the following:
-# docker-compose run auto-gpt
 version: "3.9"
 
 services:
@@ -14,3 +12,9 @@ services:
 
   redis:
     image: "redis/redis-stack-server:latest"
+    volumes:
+      - "redis_data:/data"
+
+volumes:
+  redis_data:
+  .env:
