--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     build: ./
     volumes:
       - "./scripts:/app"
-      - "env-volume:/app/.env"
+      - ".env:/app/.env"
       - "logs:/home/logs"
     # profiles: ["exclude-from-up"]
 
@@ -21,5 +21,4 @@ services:
 
 volumes:
   redis_data:
-  env-volume:
   logs:
